[package]
name = "explore-axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5"}
tokio = { version = "1.39.2", features = ["full"] }
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
tower-http = {version = "0.5.2", features = ["cors"]}
sqlx = {version = "0.8.0", features = ["runtime-tokio-rustls", "json", "mysql"]}